# imdb-graphql

./: .gitignore  LICENSE  README.md
src/postgres/: README.md  create_indices.sql  create_tables.sql  explore.ipynb  format_tables.sql  load_data.R  load_tables.sql  pg_import_format.R  read_imdb.R  text_search.sql
src/postgres/extras/: create_indices.sql  create_tables.sql  format_tables.sql  load_tables.sql  text_search.sql
src/python/: .env.example  pyproject.toml
src/python/imdb_graphql/: app.py  database.py  get_fields.py  models.py  schema.py
src/python/tests/: test_imdb_graphql.py
