[tool.poetry]
name = "imdb-graphql"
version = "0.1.0"
description = "GraphQL API for IMDB"
authors = ["Kien Dang <mail@kien.ai>"]
readme = "README.md"
packages = [{include = "imdb_graphql"}]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.2"
graphene = "^3.2.1"
sqlalchemy = "^1.4.45"
graphql-server = {version = "^3.0.0b6", extras = ["flask"]}
graphene-sqlalchemy = {git = "https://github.com/graphql-python/graphene-sqlalchemy.git", rev = "d0668cc82dfd349aa418dd6fc16d54e80162960a"}
psycopg2-binary = "^2.9.5"
flask-cors = "^3.0.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
python-dotenv = "^0.21.0"
mypy = "^0.991"
isort = "^5.11.3"
black = "^22.12.0"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
combine_as_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
